[tool.poetry]
name = "livekit-egress-test"
version = "0.1.0"
description = ""
authors = ["János Kranczler <kranczler.janos@gmail.com>"]
readme = "README.md"
packages = [{include = "livekit_egress_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
websockets = "^11.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
